--- a/HighFrequencyDataFlow/HighFrequencyDataFlow/HighFrequencyDataFlow.csproj
+++ b/HighFrequencyDataFlow/HighFrequencyDataFlow/HighFrequencyDataFlow.csproj
@@ -11,4 +11,13 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Data\CatNames.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\Daycare_Activities.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
